--- a/client/app/src/App.css
+++ b/client/app/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+.popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-window {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+
+  text-aligh: center;
+}
